--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,11 @@
         "symfony/flex": "^2",
         "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/runtime": "6.0.*",
+        "symfony/security-csrf": "6.0.*",
         "symfony/twig-bundle": "6.0.*",
+        "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
@@ -71,6 +74,9 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.50"
+        "symfony/debug-bundle": "6.0.*",
+        "symfony/maker-bundle": "^1.50",
+        "symfony/stopwatch": "6.0.*",
+        "symfony/web-profiler-bundle": "6.0.*"
     }
 }
