--- a/.env
+++ b/.env
@@ -18,3 +18,13 @@
 APP_ENV=dev
 APP_SECRET=9cb4b84928b2bf061f7c87621e0fc651
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://root:@127.0.0.1:3307/Stutweet?serverVersion=8&charset=utf8mb4"
+DATABASE_URL="mysql://root:@127.0.0.1:3307/Stutweet?serverVersion=mariadb-10.4.10"
+# DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
+###< doctrine/doctrine-bundle ###
